Fix display on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@ body {
 
   color: #1f2937;
   line-height: 1.6;
-  margin: 1rem 5rem;
+  /* margin: 1rem 5rem; */
   padding: 1rem;
   background-color: #f9fafb;
 }
